<resources>
    <string name="app_name">Owl Live Attendance App</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in">Sign-in</string>
    <string name="history">History</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current Location</string>
    <string name="default_lokasi">default lokasi</string>
    <string name="month">SEP</string>
    <string name="date">02</string>
    <string name="check_out">Check-Out</string>
    <string name="check_in">Check-In</string>
    <string name="default_time">10:00</string>
    <string name="default_name">default-name</string>
    <string name="default_email">default-email</string>
    <string name="old_password">*******</string>
    <string name="new_password">*******</string>
    <string name="confirm_new_password">*******</string>
    <string name="sign_out">Sign-Out</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="please_field_your_email">Please, field your email!</string>
    <string name="please_use_valid_email">Please, use valid email!</string>
    <string name="please_field_your_password">Please field your password!</string>
    <string name="success">Success</string>
    <string name="not_granted">Not Granted</string>
    <string name="required_permission">Required Permission</string>
    <string name="search_your_location">Search your location...</string>
    <string name="failed_to_capture_image">Failed to Capture Image</string>
    <string name="alert">Alert</string>
    <string name="please_take_your_photo">Please take your photo</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success_check_in">Success Check-In</string>
    <string name="success_check_out">Success Check-Out</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="your_already_present">You Already Present</string>

</resources>