<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warna2"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".views.fragment.history.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="H i s t o r y"
            android:textAlignment="center"
            android:textColor="@color/warna4"
            android:textSize="32sp" />


        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:abbreviationsBarColor="@color/warna2"
            app:abbreviationsLabelsColor="@color/warna7"
            app:eventsEnabled="true"
            app:forwardButtonSrc="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:headerColor="@color/warna2"
            app:headerLabelColor="@color/warna7"
            app:pagesColor="@color/warna2"
            app:previousButtonSrc="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:todayLabelColor="@color/warna3" />

        <androidx.cardview.widget.CardView
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/container_date"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:minWidth="100dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_current_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/month"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_current_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@id/container_date"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/check_in"
                        android:textAlignment="center"
                        android:textColor="@color/warna4"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_check_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/default_time"
                        android:textAlignment="center"
                        android:textColor="@color/warna3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/check_out"
                        android:textAlignment="center"
                        android:textColor="@color/warna4"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_check_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/default_time"
                        android:textAlignment="center"
                        android:textColor="@color/warna6" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>